# aula-embarcados

./: .gitignore  Links  README.md
Aula_1/: README.md
Aula_1/BlinkyLed/: .cproject  .mxproject  .project  BlinkyLed.ioc
Aula_1/cmake/: CMakeLists.txt
Aula_1/debug/: main.c
Aula_1/make/: Makefile
Aula_2/Aula2_Desafio1_F303/: .cproject  .mxproject  .project
Aula_2/Aula2_Desafio1_F446/: .cproject  .mxproject  .project  Aula2_Desafio1_F446.ioc
Aula_2/Aula2_Desafio2_F303/: .mxproject  .project  Aula2_Desafio2_F303.ioc
Aula_2/Aula2_Desafio2_F446/: .project  Aula2_Desafio2_F446.ioc
Aula_2/Aula2_Desafio3_F303/: .cproject  .project
Aula_2/Aula2_Desafio3_F446/: .cproject  .project
Aula_2/Aula2_Desafio4_F303/: .project  Aula2_Desafio4_F303.ioc
Aula_2/Aula2_Desafio4_F446/: .mxproject  .project  Aula2_Desafio4_F446.ioc
Aula_3/Aula3_Desafio1_F303/: .cproject  .project  Aula3_Desafio1_F303.ioc
Aula_3/Aula3_Desafio1_F446/: .cproject  .mxproject  .project  Aula3_Desafio1_F446.ioc
Aula_3/Aula3_Desafio2_F303/: .cproject  .mxproject  .project  Aula3_Desafio2_F303.ioc
Aula_3/Aula3_Desafio2_F446/: .cproject  .project  Aula3_Desafio2_F446.ioc
Aula_3/Aula3_Desafio3_F303/: .project  Aula3_Desafio3_F303.ioc
Aula_3/Aula3_Desafio3_F446/: .project  Aula3_Desafio3_F446.ioc
Aula_4/Aula4_Demo1_F303/: .project  Aula2_Desafio1_F303.ioc
Aula_4/Aula4_Desafio1_F303/: .cproject  .mxproject  .project  Aula4_Desafio1_F303.ioc
Aula_4/Aula4_Desafio1_F446/: .mxproject  .project  Aula4_Desafio1_F446.ioc
Aula_4/Aula4_Desafio2_F303/: .mxproject  .project  (+1 more)
(+113 files in other folders)
